tests/error/misc_errors/unreachable_8.err
Error: Unreachable (at $FILE:9:8)
  | 
7 |         x += 1
8 |     else:
9 |         x -= 1
  |         ^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
